<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Advanced Calculator</string>
    <string name="action_settings">Settings</string>

    <string name="title_scientific">Real Calc</string>
    <string name="title_matrix">Matrix</string>
    <string name="title_graph_2d">2D Graph</string>
    <string name="title_graph_3d">3D Graph</string>

    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="expression_hint">Enter expression (e.g., sin(pi/2))</string>
    <string name="matrix_input_label">Enter Matrix A (rows comma-separated, elements space-separated):</string>
    <string name="matrix_hint">1 2, 3 4</string>
    <string name="btn_determinant">Calculate Determinant</string>
    <string name="determinant_result">Determinant: %1$.2f</string>
    <string name="error_prefix">Error: %1$s</string>
    <string name="plot">Plot</string>
    <string name="plot_3d">Plot 3D</string>
    <string name="function_2d_hint">f(x) = sin(x)</string>
    <string name="function_3d_hint">f(x,y) = sin(x)*cos(y)</string>

    <string name="matrix_det_result">Determinant: %1$s</string>
    <string name="matrix_inv_result">Inverse:\n%1$s</string>
    <string name="matrix_trans_result">Transpose:\n%1$s</string>
    <string name="matrix_trace_result">Trace: %1$s</string>
    <string name="btn_det_short">Det</string>
    <string name="btn_inv_short">Inverse</string>
    <string name="btn_trans_short">Transpose</string>
    <string name="btn_trace_short">Trace</string>

    <!-- Calculator functions -->
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="asin">asin</string>
    <string name="acos">acos</string>
    <string name="atan">atan</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="sqrt">√</string>
    <string name="pow">x^y</string>
    <string name="pi">π</string>
    <string name="e">e</string>
    <string name="abs">|x|</string>
    <string name="fact">n!</string>
    <string name="frac">1/x</string>
    <string name="mod">%</string>
    <string name="deg">DEG</string>
    <string name="complex_i">i</string>
    <string name="const_btn">Ans</string>
    <string name="del">DEL</string>
    <string name="ac">AC</string>
    <string name="equals">=</string>
    <string name="neg">+/-</string>

    <string name="plot_3d_hint">提示: 拖拽屏幕旋转视角，使用 x 和 y 作为变量</string>

    <!-- Compatibility for old fragments -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_complex">Complex</string>
    <string name="title_unit">Unit Converter</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet.</string>
</resources>
